trunk/Archive2/51/bb973c33e40cf3/output
main.cpp: In function 'int main()':
main.cpp:42:39: error: no matching function for call to 'f(std::vector<float>&)'
     if (has_f<decltype(v)>::value) f(v);
                                       ^
main.cpp:42:39: note: candidates are:
main.cpp:11:8: note: double f(int)
 double f(int) {return 0.0;}
        ^
main.cpp:11:8: note:   no known conversion for argument 1 from 'std::vector<float>' to 'int'
main.cpp:12:5: note: int f(std::vector<int>)
 int f(vector<int>);
     ^
main.cpp:12:5: note:   no known conversion for argument 1 from 'std::vector<float>' to 'std::vector<int>'
